--- a/1.html
+++ b/1.html
@@ -1,20 +1,17 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1-Welcome</title>
+<title>Gift No.1</title>
 <meta charset="utf=8">
 </head>
 
 <body>
-<h1><a href="index.html">WEB</a></h1>
+<h1>난 윌에게 들은 대로 살기로 했다</h1>
   <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
-  <h2>HTML</h2>
-<p>
-  기억나니 HTML의 추억?
-</p>
+  "삶이 저절로 펼쳐질 때까지 <br>
+  매 순간 속에서 단순히 존재하기로." <br><br>
+                   - Still Me, 조조 모예스</ol>
+
+  <img src="GIFT.PNG" width="700" height="1000">
 </body>
 </html>
